<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".OTPVerification">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:adjustViewBounds="true"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/otpVerify"
        android:textColor="@color/text_color"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textColor="@color/text_color"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/otpEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/google_mail"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textColor="@color/text_color"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/otpMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/_27713340557"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:gravity="center">

        <EditText
            android:id="@+id/otpET1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/round_back_yellow"
            android:gravity="center"
            android:inputType="number"
            android:textColor="@color/text_color"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/otpET2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/round_back_yellow"
            android:gravity="center"
            android:inputType="number"
            android:textColor="@color/text_color"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/otpET3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/round_back_yellow"
            android:gravity="center"
            android:inputType="number"
            android:textColor="@color/text_color"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/otpET4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/round_back_yellow"
            android:gravity="center"
            android:inputType="number"
            android:textColor="@color/text_color"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_weight="1"/>


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/verifyBtn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/welcome_background"
        android:text="@string/verify"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_otp"/>

        <TextView
            android:id="@+id/resendBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/resend_otp"
            android:textStyle="bold"
            android:textColor="@color/text_color"/>

    </LinearLayout>



</LinearLayout>